add product list static

--- a/src/assets/i18n/alb.json
+++ b/src/assets/i18n/alb.json
@@ -47,6 +47,7 @@
     "Pincode":"Kodi pin",
     "Search location": "Kërko vendndodhjen",
     "Categories": "Kategoritë",
+    "Featured products": "Featured products",
     "Contact us": "Na kontaktoni",
     "Address": "Adresë",
     "PHONE": "TELEFONI",
