--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -48,6 +48,7 @@
   "Pincode": "الرقم السري",
   "Search location": "موقع البحث",
   "Categories": "أصناف االطباق",
+  "Featured products": "Featured products",
   "Contact Us": "اتصل بنا",
   "Address": "عنوان",
   "PHONE": "هاتف",
