--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -47,6 +47,7 @@
   "Pincode": "Pincode",
   "Search location": "Search location",
   "Categories": "Categories",
+  "Featured products": "Featured products",
   "Contact us": "Contact us",
   "Address": "Address",
   "PHONE": "PHONE",
