--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -48,6 +48,7 @@
   "Pincode": "Pincode",
   "Search location": "Buscar ubicación",
   "Categories": "Categorías",
+  "Featured products": "Featured products",
   "Contact us": "Contacto",
   "Contact Us": "Contacto",
   "Address": "Dirección",
