--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -47,6 +47,7 @@
     "Pincode": "Code PIN",
     "Search location": "Rechercher un emplacement",
     "Categories": "Catégories",
+    "Featured products": "Featured products",
     "Contact us": "Nous contacter",
     "Address": "Adresse",
     "PHONE": "TÉLÉPHONE",
