--- a/src/assets/i18n/ml.json
+++ b/src/assets/i18n/ml.json
@@ -47,6 +47,7 @@
     "Pincode": "പിൻ കോഡ്",
     "Search location": "ലൊക്കേഷൻ തിരയുക",
     "Categories": "വിഭാഗങ്ങൾ",
+    "Featured products": "Featured products",
     "Contact us": "ഞങ്ങളെ സമീപിക്കുക",
     "Address": "വിലാസം",
     "PHONE": "ഫോൺ",
