--- a/src/assets/i18n/mx.json
+++ b/src/assets/i18n/mx.json
@@ -47,6 +47,7 @@
   "Pincode": "Código PIN",
   "Search location": "Buscar ubicación",
   "Categories": "Categorías",
+  "Featured products": "Featured products",
   "Contact Us": "Contáctenos",
   "Address": "Habla a",
   "PHONE": "TELÉFONO",
