--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -47,6 +47,7 @@
     "Pincode": "รหัสพิน",
     "Search location": "ค้นหาตำแหน่ง",
     "Categories": "หมวดหมู่",
+    "Featured products": "Featured products",
     "Contact us": "ติดต่อเรา",
     "Address": "ที่อยู่",
     "PHONE": "เบอร์โทรศัพท์",
